RESOLVED FIXED35025
Web Inspector: Errors when inspecting styles of non-renderable elements in XHTML
https://bugs.webkit.org/show_bug.cgi?id=35025
Summary Web Inspector: Errors when inspecting styles of non-renderable elements in XHTML
Alexander Pavlov (apavlov)
Reported 2010-02-17 03:17:38 PST
Created attachment 48882 [details] Test Case 1. Bring up the Web Inspector for the attached Test Case (XHTML page). 2. In the Elements panel (note that the top-level node is not expanded), make the <img> or <script> elements visible. 3. Click either of the <img> or <script> elements. In the Console, you will see a red crossed circle followed by "Error dispatching: getStyles" (or "Error dispatching: getInlineStyle"). The Styles sidebar pane is empty, and the Properties pane does not show the full elements hierarchy (HTMLImgElement or HTMLScriptElement are not displayed)
Attachments
Test Case (128 bytes, application/xhtml+xml)
2010-02-17 03:17 PST, Alexander Pavlov (apavlov)
no flags
[PATCH] Proposed fix. (9.60 KB, patch)
2010-03-16 06:35 PDT, Pavel Feldman
timothy: review+
Pavel Feldman
Comment 1 2010-03-16 06:35:15 PDT
Created attachment 50786 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-03-16 06:58:16 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/front-end/DOMAgent.js M WebCore/inspector/front-end/MetricsSidebarPane.js M WebCore/inspector/front-end/StylesSidebarPane.js Committed r56059
Adam Barth
Comment 3 2010-03-16 09:05:25 PDT
This appears to have broken the tree: $ ./WebKitTools/Scripts/webkit-patch what-broke Leopard Intel Release (Tests) : FAIL (blame-list: [56059]) Leopard Intel Debug (Tests) : FAIL (blame-list: [56059]) SnowLeopard Intel Release (Tests) : FAIL (blame-list: [56059])
Pavel Feldman
Comment 4 2010-03-16 09:47:29 PDT
(In reply to comment #3) > This appears to have broken the tree: > > $ ./WebKitTools/Scripts/webkit-patch what-broke > Leopard Intel Release (Tests) : FAIL (blame-list: [56059]) > Leopard Intel Debug (Tests) : FAIL (blame-list: [56059]) > SnowLeopard Intel Release (Tests) : FAIL (blame-list: [56059]) Should have been fixed by r56067
Note You need to log in before you can comment on or make changes to this bug.